# vorp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: create_release.yml
app/: Cargo.toml
app/src/: app_menus.rs  coding_panel_enablement_state.rs  firebase.rs  firebase_oss.rs  input_classifier.rs  languages_shim.rs  lib.rs  lsp_shim.rs  lsp_types_shim.rs  oauth2.rs  onboarding_shim.rs  pricing_oss.rs  repo_metadata_shim.rs  root_view.rs  syntax_tree_shim.rs  terminal_only.rs  warp_editor_shim.rs  warp_files_shim.rs  warp_managed_secrets.rs  watcher_shim.rs
app/src/ai/: agent_tips_oss.rs  ai_document_view.rs  ai_document_view_oss.rs  aws_credentials.rs  conversation_details_panel_oss.rs  llms.rs  llms_oss.rs  mcp_oss.rs  mod.rs  onboarding.rs  persisted_workspace.rs  request_usage_model.rs
app/src/ai_assistant/: mod.rs  panel_oss.rs  requests_oss.rs  utils_oss.rs
app/src/antivirus/: telemetry.rs
app/src/auth/: auth_manager.rs  auth_manager_oss.rs  auth_override_warning_modal_oss.rs  auth_state.rs  auth_state_oss.rs  auth_view_modal_oss.rs  credentials.rs  credentials_oss.rs  login_failure_notification_oss.rs  login_slide_oss.rs  mod.rs  needs_sso_link_view_oss.rs  paste_auth_token_modal_oss.rs  user.rs  user_oss.rs
app/src/autoupdate/: linux.rs  mac.rs  mod.rs  mod_test.rs  windows.rs
app/src/billing/: mod.rs  shared_objects_creation_denied_modal_oss.rs
app/src/cloud_object/: mod.rs
app/src/code/: diff_viewer_oss.rs  editor_management_oss.rs  editor_oss.rs  global_buffer_model_oss.rs  local_code_editor_oss.rs  lsp_telemetry.rs  lsp_telemetry_oss.rs  mod.rs  view_oss.rs
app/src/code_review/: code_review_header_oss.rs  code_review_view_oss.rs  comment_rendering_oss.rs  context_oss.rs  diff_size_limits_oss.rs  diff_state_oss.rs  git_status_update_oss.rs  mod.rs  telemetry_event.rs  telemetry_event_oss.rs
app/src/context_chips/: display_chip.rs
app/src/drive/: index.rs  settings.rs
app/src/editor/: mod.rs
app/src/notebooks/: editor_oss.rs  file_oss.rs  manager_oss.rs  mod.rs  notebook.rs  notebook_oss.rs
app/src/pane_group/: mod.rs  working_directories.rs
app/src/persistence/: mod.rs  sqlite.rs
app/src/remote_server/: mod.rs
app/src/resource_center/: sections.rs
app/src/search/: ai_context_menu_oss.rs  data_source.rs  mod.rs
app/src/server/: block.rs  mod.rs  network_log_view_oss.rs  (+4 more)
crates/ai/: Cargo.toml
crates/ai/src/: api_keys_oss.rs  aws_credentials_oss.rs  computer_use.rs  lib.rs  rmcp.rs  skills_oss.rs  telemetry.rs  warp_graphql.rs
crates/ai/src/agent/action/: convert.rs  mod.rs
crates/ai/src/agent/action_result/: convert.rs  mod.rs
crates/ai/src/index/: full_source_code_embedding_unavailable.rs  mod.rs
crates/ai/src/index/file_outline/: mod.rs
crates/ai/src/index/full_source_code_embedding/: chunker.rs  manager.rs
crates/ai/src/index/full_source_code_embedding/merkle_tree/: tree.rs
crates/editor/: Cargo.toml
crates/http_client/: Cargo.toml
crates/languages/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/repo_metadata/: Cargo.toml
crates/settings/: Cargo.toml
crates/syntax_tree/: Cargo.toml
crates/warp_cli/: Cargo.toml
crates/warp_completer/: Cargo.toml
crates/warp_core/: Cargo.toml
crates/warp_features/: Cargo.toml
crates/warp_files/: Cargo.toml
crates/warp_files/src/: lib.rs
crates/warp_server_client/: Cargo.toml
crates/warpui/: build.rs
script/: Entitlements.plist  check_upstream_release  compile_icon  prepare_bundled_resources  update_plist
script/linux/: bundle
script/macos/: bundle  publish_github_release  run
script/windows/: bundle.ps1  prepare_bundled_resources.ps1
specs/oss-release-size/: TECH.md
(+358 files in other folders)
