[package]
name = "warp_files"
version = "0.1.0"
edition = "2021"
authors = ["Warp Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-channel.workspace = true
async-fs.workspace = true
futures.workspace = true
thiserror.workspace = true
warpui.workspace = true
remote_server = { workspace = true, optional = true }
warp_core.workspace = true
warp_util.workspace = true
watcher.workspace = true
notify-debouncer-full.workspace = true
repo_metadata = { workspace = true, optional = true }
log.workspace = true

[features]
default = ["remote_server", "repository_watching"]
remote_server = ["dep:remote_server"]
repository_watching = ["dep:repo_metadata"]
test-util = []

[dev-dependencies]
async-channel.workspace = true
tempfile.workspace = true
